# renderengine_lite

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
android/: README.md  build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/java/com/rel/avmdemo/: MainActivity.kt  NativeEngine.kt
android/app/src/main/res/values/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
include/rel/: Camera.h  Engine.h  Entity.h  IndexBuffer.h  Material.h  MaterialInstance.h  Renderable.h  Renderer.h  Scene.h  SwapChain.h  Texture.h  VertexBuffer.h  View.h  rel_fwd.h
samples/desktop_preview/: README.md
src/avm/: BowlMeshGenerator.h  CameraStreamManager.cpp  CameraStreamManager.h  FisheyeCalibration.h  StitchBlender.h
src/backend/: DriverApi.h  DriverEnums.h  Handles.h  Platform.h
src/backend/opengl/: GLDriver.cpp  GLDriver.h
src/engine/: Camera.cpp  Engine.cpp  EngineImpl.h  EntityManager.h  IndexBuffer.cpp  Material.cpp  MaterialInstance.cpp  Renderable.cpp  RenderableManager.h  ResourceImpls.h  Scene.cpp  SwapChain.cpp  Texture.cpp  TransformManager.h  VertexBuffer.cpp  View.cpp
src/materials/: overlay_ui.frag  overlay_ui.vert  simple_lit.frag  simple_lit.vert  surround_view.frag  surround_view.vert
src/platform/android/: PlatformEGLAndroid.cpp  PlatformEGLAndroid.h
src/renderer/: RenderPass.cpp  RenderPass.h  Renderer.cpp  RendererImpl.h
src/renderer/passes/: CarModelPass.cpp  CarModelPass.h  OverlayUIPass.cpp  OverlayUIPass.h  SurroundViewPass.cpp  SurroundViewPass.h
src/utils/: Math.h
